--- a/charge-notifier/charge-notifier.service
+++ b/charge-notifier/charge-notifier.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=Charger notify service
+Description=Charge Notifier - Battery charge notifier service
 
 [Service]
 Type=simple
 ExecStartPre=/bin/sleep 30
 ExecStart=/home/%u/.local/bin/charge-notify.sh
+Restart=on-failure
 
 [Install]
 WantedBy=default.target
